Slide 5: Improve Bayes Filter derivation

--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -63,7 +63,7 @@
 \newcommand{\controlCommand}{u}
 \newcommand{\covariance}{\Sigma}
 \newcommand{\motionModelNoise}{\epsilon}
-\newcommand{\measurementModelNoise}{\epsilon}
+\newcommand{\measurementModelNoise}{\delta}
 \newcommand{\motionModelFunction}[1]{g\left( #1 \right)}
 \newcommand{\observationModelFunction}[1]{h\left( #1 \right)}
 \newcommand{\motionParametersCovariance}{R}
