Slide 6: Remove indents

--- a/teoricas/teorica_06/src/particle_filter.tex
+++ b/teoricas/teorica_06/src/particle_filter.tex
@@ -4,4 +4,8 @@
     
     \TODO{UTILIZAR LAS SLIDES DEL SEMINARIO}
     
+    \begin{itemize}
+        \item Con EKF estamos restringidos a distribuciones Gaussianas.
+    \end{itemize}
+    
 \end{frame}
