Slide 6: Adding particle filter slides

--- a/teoricas/teorica_06/src/particle_filter.tex
+++ b/teoricas/teorica_06/src/particle_filter.tex
@@ -9,3 +9,18 @@
     \end{itemize}
     
 \end{frame}
+
+
+\begin{frame}
+    \frametitle{Filtro de Partículas (Particle Filter)}
+    \TODO{Vídeo de Cyrill Stachniss \url{https://youtu.be/MsYlueVDLI0}}
+    
+    \TODO{UTILIZAR LAS SLIDES DEL SEMINARIO}
+    
+    \begin{itemize}
+        \item Cuando usamos EKF obtenemos una Distibuión Gaussiana que describe dónde se encuentra el robot.
+        \item En Particle Filter utilizamos partículas o hipótesis que describen dónde podría estar el robot.
+        \item En vez de tener una forma paramétrica como es EKF, que describimos la distribución de probabilidad con los parámetros media $\mu$ y covarianza $\covariance$. Partible Filter utiliza muestras no-paramétricas como hipótesis sobre dónde el robot podría estar.
+    \end{itemize}
+    
+\end{frame}
