Slide 6: Add particle filter video

--- a/teoricas/teorica_06/src/particle_filter.tex
+++ b/teoricas/teorica_06/src/particle_filter.tex
@@ -9,6 +9,8 @@
         \item En vez de tener una forma paramétrica como es EKF, que describimos la distribución de probabilidad con los parámetros media $\mu$ y covarianza $\covariance$. Partible Filter utiliza muestras no-paramétricas como hipótesis sobre dónde el robot podría estar.
     \end{itemize}
     
+    \TODO{Agregar Vídeo Filtro de Partícolas de \url{https://rse-lab.cs.washington.edu/projects/mcl/animations/global-floor.gif}}
+    
 \end{frame}
 
 \begin{frame}
