Slide 6: Add particle filter video

--- a/teoricas/teorica_06/src/particle_filter.tex
+++ b/teoricas/teorica_06/src/particle_filter.tex
@@ -9,7 +9,12 @@
         \item En vez de tener una forma paramétrica como es EKF, que describimos la distribución de probabilidad con los parámetros media $\mu$ y covarianza $\covariance$. Partible Filter utiliza muestras no-paramétricas como hipótesis sobre dónde el robot podría estar.
     \end{itemize}
     
-    \TODO{Agregar Vídeo Filtro de Partícolas de \url{https://rse-lab.cs.washington.edu/projects/mcl/animations/global-floor.gif}}
+    
+   	\begin{center}
+        \movie[loop]{\includegraphics[width=0.4\columnwidth]{images/particle_filter/particle_filter_video.jpg}}{videos/particle_filter.mp4}
+    \end{center}
+    
+    \note{Vídeo extraído de https://rse-lab.cs.washington.edu/projects/mcl/animations/global-floor.gif}
     
 \end{frame}
 
