Slide 7: Add captions to some images

--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -1,8 +1,13 @@
 \begin{frame}
 	\frametitle{Material para armado de estas slides}
-	Curso de Cyrill Stachniss: \url{https://youtu.be/v-Rm9TUG9LA}
+    
+    \begin{itemize}
+	\item Curso de Cyrill Stachniss: \url{https://youtu.be/v-Rm9TUG9LA}
 
-	Curso de Cyrill Stachniss (slides): \url{http://ais.informatik.uni-freiburg.de/teaching/ws12/mapping/pdf/slam11-gridmaps-4.pdf}
+    \item Curso de Cyrill Stachniss (slides): \url{http://ais.informatik.uni-freiburg.de/teaching/ws12/mapping/pdf/slam11-gridmaps-4.pdf}
+    \end{itemize}
+    
+
     
 
 \end{frame}
@@ -35,41 +40,41 @@
     \frametitle{Sensores para la creación de mapas}
     \note{información extraída de https://youtu.be/v-Rm9TUG9LA}
     
-    \note{Sensores exteoceptivos que nos permiten medir el entorno}
+    \note{Sensores exteroceptivos que nos permiten medir el entorno}
  	
    	\begin{figure}[!h]
     		\centering
-    		\subfloat[]
+    		\subfloat[\scriptsize Cámara]
     		{
-    			\includegraphics[width=0.15\columnwidth]{./images/flir_blackfly_s_camera.jpg}
+    			\includegraphics[width=0.15\columnwidth,valign=m]{./images/flir_blackfly_s_camera.jpg}
     		}
-    		\subfloat[]
+    		\subfloat[\scriptsize Cámara Estéreo]
     		{
-    			\includegraphics[width=0.2\columnwidth]{./images/stereo_camera_zed.png}
+    			\includegraphics[width=0.2\columnwidth,valign=m]{./images/stereo_camera_zed.png}
     		}
-    		\subfloat[]
+    		\subfloat[\scriptsize Cámara \SI{360}{\degree}]
     		{
-    			\includegraphics[width=0.1\columnwidth]{./images/ladybug5plus_360_camera.png}
+    			\includegraphics[width=0.1\columnwidth,valign=m]{./images/ladybug5plus_360_camera.png}
     		}
-    		\subfloat[]
+    		\subfloat[\centering \scriptsize Cámara de Luz Estructurada]
     		{
-    			\includegraphics[width=0.2\columnwidth]{./images/structured_light_kinect.png}
+    			\includegraphics[width=0.2\columnwidth,valign=m]{./images/structured_light_kinect.png}
     		}\\
-		   	\subfloat[]
+		   	\subfloat[\scriptsize Cámara ToF]
     		{
-    			\includegraphics[width=0.15\columnwidth]{./images/terabee_time_of_flight_camera.png}
+    			\includegraphics[width=0.15\columnwidth,valign=m]{./images/terabee_time_of_flight_camera.png}
 	    	}
-    		\subfloat[]
+    		\subfloat[\scriptsize Cámara de Eventos]
     		{
-    			\includegraphics[width=0.2\columnwidth]{./images/event_camera_dvs128.png}
+    			\includegraphics[width=0.2\columnwidth,valign=m]{./images/event_camera_dvs128.png}
     		}
-    		\subfloat[]
+    		\subfloat[\scriptsize LiDAR 2D]
     		{
-    			\includegraphics[width=0.15\columnwidth]{./images/lidar_sick.jpg}
+    			\includegraphics[width=0.15\columnwidth,valign=m]{./images/lidar_sick.jpg}
     		}
-	   		\subfloat[]
+	   		\subfloat[\scriptsize LiDAR 3D]
     		{
-    			\includegraphics[width=0.15\columnwidth]{./images/velodyne_puck.png}
+    			\includegraphics[width=0.15\columnwidth,valign=m]{./images/velodyne_puck.png}
     		}
     	\end{figure}
     
