Slide 8: minor changes

--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -196,6 +196,7 @@
 \begin{frame}
     \frametitle{Tipos de SLAM Back-ends}
     \note{Información extraída de https://youtu.be/BuRCJ2fegcc y de https://youtu.be/Alu59K8zvYs}
+    \footnotesize
     \begin{itemize}
         \item Basados en Kalman Filter (EKF-SLAM)
         \item Basados en Particle Filter (FastSLAM, Rao-Blackwellized Particle Filter, Gmapping)
@@ -212,9 +213,9 @@
             \end{itemize}
     \end{itemize}
 
-	\begin{figure}[!h]
-        \includegraphics[width=0.2\textwidth]{images/slam-landmarks.pdf}
-    \end{figure}
+	\begin{center}
+        \includegraphics[width=0.25\textwidth]{images/slam-landmarks.pdf}
+    \end{center}
     
 \end{frame}
 
