Slide 8: bugfix in equation in error funtion slide

--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -463,7 +463,7 @@
     \item El error toma el valor 0 cuando
     
     \begin{equation*}
-        \inverse{\observationBold}_{ij} = (\inverse{\stateBold}_{i}\stateBold_{j})
+        \observationBold_{ij} = (\inverse{\stateBold}_{i}\stateBold_{j})
     \end{equation*}
     
     \end{itemize}
@@ -900,8 +900,8 @@
         \item Este bloque contiene la matriz de covarianza de $\stateBold_{j}$ con respecto a $\stateBold_{i}$ la cuál está fija.
     \end{itemize}
 
-     \begin{figure}[!h]
-    \includegraphics[width=0.2\textwidth]{pose_graph_relative_uncertainty.pdf}
+    \begin{figure}[!h]
+        \includegraphics[width=0.2\textwidth]{pose_graph_relative_uncertainty.pdf}
     \end{figure}
     
 \end{frame}
